force-app/main/default/objects/Target_Actual__c/Target_Actual__c.object-meta.xml
<CustomObject>
    <label>Target Actual</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Target Actual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>