force-app/main/default/objects/Target_Actual__c/fields/Daily_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Daily_Achievement__c</fullName>
    <label>Daily Achievement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>