force-app/main/default/objects/Target_Actual__c/fields/Pending_Target__c.field-meta.xml
<CustomField>
    <fullName>Pending_Target__c</fullName>
    <formula>Target_Value__c -  Achievement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>