force-app/main/default/objects/Target_Actual__c/fields/Target_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Target_Criteria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Criteria</label>
    <referenceTo>Target_Criteria__c</referenceTo>
    <relationshipLabel>Targets Actuals</relationshipLabel>
    <relationshipName>Targets_Actuals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>