force-app/main/default/objects/Target_Actual__c/fields/Teams_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Teams_Achievement__c</fullName>
    <label>Team&apos;s Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>