force-app/main/default/objects/Target_Actual__c/fields/Teams_Target__c.field-meta.xml
<CustomField>
    <fullName>Teams_Target__c</fullName>
    <label>Team&apos;s Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>