force-app/main/default/objects/Target_Actual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Criteria__c</columns>
    <columns>Target_Period__c</columns>
    <columns>Target_Value__c</columns>
    <columns>Achievement_Value__c</columns>
    <columns>Pending_Target__c</columns>
    <columns>User__c</columns>
    <columns>Last_Updated__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>